syntax = "proto3";
import "student.proto";
import "teacher.proto";
import "response.proto";
package school;
service School {
    rpc Register (RegisterRequest) returns (Response);
    rpc AddStudentsToTeacher (AddStudentsToTeacherRequest) returns (Response);
    rpc CommonStudents (CommonStudentsRequest) returns (CommonStudentsResponse);
}
message RegisterRequest {
    repeated Teacher teachers = 1;
    repeated Student students = 2;
}
message AddStudentsToTeacherRequest {
    Teacher teacher = 1;
    repeated string students = 2;
}
message CommonStudentsRequest {
    repeated string teachers = 1;
}
message CommonStudentsResponse {
    repeated Student students = 1;
    Response response = 2;
}