syntax = "proto3";
package school;
message teacher {
    string firstName = 1;
    string lastName = 2;
    string email = 3;
    repeated string students = 4;
}